<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RPi::omx Remote</string>
    <string name="title_activity_player">RPi::omx Player</string>

    <string name="error_general">Error: %s</string>
    <string name="error_list_files">Failed to list files</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_files">Files</string>
    <string name="menu_player">Player</string>
    <string name="menu_about">About</string>

    <!-- Status -->
    <string name="status_current">Current status</string>
    <string name="status_online">Online</string>
    <string name="status_offline">Offline</string>
    <string name="st_browse_files">Browse files</string>
    <string name="st_settings">Settings</string>

    <!-- File list -->
    <string name="fl_selection_header">Selected files:</string>
    <string name="fl_selection_hint">Select files from the list</string>
    <string name="fl_selection_no_video">No video file selected</string>
    <string name="fl_selection_no_subtitle">No subtitle file selected</string>
    <string name="fl_btn_start">Start</string>
    <string name="fl_starting">Starting selected video</string>

    <!-- Subtitles -->
    <string name="sub_title">Download subtitle</string>
    <string name="sub_query_hint">Query</string>

    <!-- Player -->
    <string name="pl_volume">Volume: %d dB</string>
    <string name="pl_menu_stop">Stop player</string>
    <string name="pl_finished">Playback finished</string>
    <string name="pl_btn_sub_delay_minus">sub\n-250ms</string>
    <string name="pl_btn_sub_delay_plus">sub\n+250ms</string>

    <!-- About -->
    <string name="about_created_by">Created by Viktor Ádám.</string>
    <string name="about_email">E-mail: rycus86@gmail.com</string>
    <string name="about_this_project">
        Needs a Raspberry Pi with a modified omxplayer and with a Python bridge module.\n
        https://github.com/rycus86/omxplayer\n
        https://github.com/rycus86/omxremote-py
    </string>
    <string name="about_rpi_disclaimer">
        This project is has no connection to the Raspberry Pi foundation but
        relies on the great product of them.
        Thank you for your work!
        Visit their homepage at:\n
        http://www.raspberrypi.org
    </string>
    <string name="about_tvdb_disclaimer">
        This project uses information retrieved from TheTVDB.com so thank them
        for making it available and give them a visit at:\n
        http://thetvdb.com
    </string>
    <string name="about_guessit">
        The bridge module also makes use of the GuessIt Python library, check it out at:\n
        https://pypi.python.org/pypi/guessit
    </string>
    <string name="about_subliminal">
        The bridge module (will) also use the Subliminal Python library, check it out at:\n
        https://pypi.python.org/pypi/subliminal
    </string>

</resources>
