<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFEF">

    <ImageView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:src="@drawable/raspberry"
        android:alpha="0.1"/>

    <RelativeLayout
        android:id="@+id/container_status_header"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="20dp"
        android:background="#7F66">

        <TextView
            android:id="@+id/txt_status_header"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/status_current"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/txt_status"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@id/txt_status_header"
            android:text="@string/status_offline"
            android:textSize="24sp"
            android:drawableLeft="@drawable/ic_action_navigation_cancel"
            android:gravity="center_vertical"
            android:layout_centerHorizontal="true"/>

        <ProgressBar
            android:id="@+id/status_loading_progress"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:indeterminate="true"
            android:layout_below="@id/txt_status"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="#7CCC"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            android:id="@+id/status_btn_browse"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/st_browse_files"
            android:drawableLeft="@drawable/ic_action_collection"/>

        <Button
            android:id="@+id/status_btn_settings"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_toRightOf="@id/status_btn_browse"
            android:text="@string/st_settings"
            android:drawableLeft="@drawable/ic_action_settings"/>

    </RelativeLayout>

</RelativeLayout>