<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFEF"
    tools:context=".LoginActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/txt_current_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="5dp"
        android:visibility="gone"
        android:background="#7AAF"
        android:drawableLeft="@drawable/ic_action_collection"
        android:drawablePadding="5dp"
        />

    <LinearLayout
        android:id="@+id/selection_container"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="#7AAF"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_selection_header"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/fl_selection_hint"
                android:gravity="top"
                android:textAlignment="gravity"
                android:visibility="visible"/>

            <Button
                android:id="@+id/btn_selection_start"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:drawableLeft="@drawable/ic_action_play"
                android:text="@string/fl_btn_start"
                android:visibility="gone" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_selection_starting"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/fl_starting"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/selection_starting_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/selected_video_container"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:layout_height="36dp"
                android:layout_width="36dp"
                android:src="@drawable/ic_file_video" />

            <TextView
                android:id="@+id/txt_selected_video"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/fl_selection_no_video"
                android:textSize="14sp"/>

            <ImageButton
                android:id="@+id/btn_remove_selected_video"
                android:layout_height="36dp"
                android:layout_width="36dp"
                android:src="@drawable/ic_action_navigation_cancel"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/selected_subtitle_container"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:layout_height="36dp"
                android:layout_width="36dp"
                android:src="@drawable/ic_file_subtitle" />

            <TextView
                android:id="@+id/txt_selected_subtitle"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/fl_selection_no_subtitle"
                android:textSize="14sp"/>

            <ImageButton
                android:id="@+id/btn_remove_selected_subtitle"
                android:layout_height="36dp"
                android:layout_width="36dp"
                android:src="@drawable/ic_action_navigation_cancel"/>

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/test_file_list"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_above="@id/selection_container"
        android:layout_below="@id/txt_current_path"
        android:fastScrollEnabled="true"
        android:fadingEdgeLength="20dp"
        android:requiresFadingEdge="vertical"
        />

</RelativeLayout>
